--- a/OTLWizard/FrontEnd/DataConversionWindow.resx
+++ b/OTLWizard/FrontEnd/DataConversionWindow.resx
@@ -117,20 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="wizard" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Data\wizard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="165154-dark-blue-arrow-background-vector-art1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\165154-dark-blue-arrow-background-vector-art1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="DescriptiveBestIbis-size_restricted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DescriptiveBestIbis-size_restricted.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="165154-dark-blue-arrow-background-vector-art" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\165154-dark-blue-arrow-background-vector-art.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="gradient-theme-gq4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\gradient-theme-gq4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAA/1JREFUWEe9V0lPFEEYnV+k4kXjwQMuLIqjICogyjbDgGBccQXFCS6JEk8Goqhx
+        Cy4HRFAWgWgiggcXDhpA5WIiBpiFEVAYfdYrpqWnp2S6R+NLXhi6q773ur+vvqq2wQJ6+77jZtMEqmr9
+        2HXai8LjHkn+5jXe4xgriGogGPyJ89fGkVQ4gsyyMeQd9cBxzANXpQdFJ7yS/M1rvMcxHMs5nBsN8xqo
+        uR1AonME+eVzYmbJOZzLGPNBaWAmCPkk2w5ZFzaSMRgrKGKqEGHAF/iBNUUjMreqgLGQsRiTsY0IM0CX
+        HOiqVAf6GzImYxvfRJiBzP2jlp6cxZd7xPx4xqaGHr8N1NwJWMq5o8KDjH1jaOyaRNYBv3KMitSglgZp
+        IPjjp6xY1QQVsw8Ko26PDEDscb+Eyz2lHKsitahJSANcs2aWWrHbiw2lo6i+Oi4naygp70ZKXitKqibF
+        OF/EPCOpRU1CGmDjUA3U0yVI5891ne5Ww0f513ngGVZltWB11gPkHh4TdeFFjqgNjQUVkfGoSdjYOrlO
+        jQP0ZJfjk2vLyOP7jgUJ93Hh+jv5/72HQ6i92Y9L9f2ovf4Gd1qmUP9oQvJe2yTOXBwWJgJhMalJbRv7
+        N1uo/qaexnw/7R2W4mty2lFXPxC6Gh2LEhqw8/S333GpSW1bVe24fEK9KKnl+5wu38erX2OJvQnpRV3Y
+        6OpCfEYLdhzthqPsWSRFWtILuzA4NDt/UVID0pxtoTqZfavUtnEn028sUlwwUeSo+9VcvjcJwYStbVJY
+        z/UFHWo6OrAstRlvB3xy/uKkRjG+ExsKWlFcNSE0fXIXtakaT9ruUXydnF0m/R/8WLquGXYR1CgejcvT
+        H+Ld4JwBvrm0wk6sz3+EHe6ANPHfDfA6TdjzmoWW//+mQDNApgoTmaUdZorQLwMQEUW4xXwRGg3Q5F73
+        CxPLUPRul0iThqc9w1gYWoaXLSzDuKT7YQbW5j5GzY1+843IXjq3n/+5EQ1E8MrdQVScfSkFNXFyZWYr
+        nvR8Nt+KyflbcSuSt7crmZIXLk4uTGiUc//JZrSzogf2fPOrZJ0wdKz6lZwb83bs0rXnXZW9ppdpuuAC
+        0ZZnQidmaYCI6UBS5hVpGET85malmIqJ2W04c6EvpKozQFg/krFAJ0R1P0Gqs10pqGeqsxMrxP6hR5iB
+        WA6lbGKlp6axpaRH9nmVsKToCXHJjeLVh5+MwwwQsRzLZ018Q/buPlGMkengk1Ocy9eICAME34TVDxOa
+        KDk5hZyD70Wfb5LCLDjmnK/d+OQalAY0WP00kybEVuso/4Tk7AeyWekLToV5DRDWP05HkVzsxdm6L5ie
+        nglF+TOiGtDj33+eA78A4GVUPMncWdwAAAAASUVORK5CYII=
+</value>
   </data>
 </root>
